kubernetes/applications/vikunja/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: vikunja

  ports:
    - name: http
      port: 3456
      targetPort: http
      protocol: TCP
